tests/lowering/crate-declarations-unsupported.stderr
error: crate declarations not supported yet
 >>> ${DIRECTORY}/lowering/crate-declarations-unsupported.lushui:3:1
  |
3 | crate gateway
  | ^^^^^^^^^^^^^ 
  |

error: crate declarations not supported yet
 >>> ${DIRECTORY}/lowering/crate-declarations-unsupported.lushui:6:1
  |
6 | crate gate-way
  | ^^^^^^^^^^^^^^ 
  |

error: aborting due to 2 previous errors

