tests/lowering/crate-declarations-unsupported.lushui
;; TEST fail check

crate gateway

; another one
crate gate-way
